--- a/main.html
+++ b/main.html
@@ -4,10 +4,13 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="container">
+		<h1 class="block-heading">Shopping Cart</h1>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
