--- a/main.html
+++ b/main.html
@@ -30,19 +30,19 @@
 						</div>
 						<div class="row">
 						<div class="col-lg-2">
-							<h6>I am very sorry</h6>
+							<h6 class="block-heading p">I am very sorry</h6>
 							<li>Display:5 inch</li>
 							<li>RAM:4GB</li>
 							<li>Memory:32GB</li>
 						</div>
 							<div class="col-lg-2">
-							<h6>I am very sorry</h6>
+							<h6 class="block-heading p">I am very sorry</h6>
 							<li>Display:5 inch</li>
 							<li>RAM:4GB</li>
 							<li>Memory:32GB</li>
 						</div>
 							<div class="col-lg-2">
-							<h6>I am very sorry</h6>
+							<h6 class="block-heading p">I am very sorry</h6>
 							<li>Display:5 inch</li>
 							<li>RAM:4GB</li>
 							<li>Memory:32GB</li>
