--- a/main.html
+++ b/main.html
@@ -9,74 +9,27 @@
 
 <body>
 	<div class="container">
-		<h1 class="block-heading">Shopping Cart</h1>
-		<div>
-			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+    <h1 class="block-heading">Shopping Cart</h1>
+		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             Ratione molestiae itaque illum debitis impedit ad eos recusandae qui placeat,
-            ex aspernatur non ipsam quisquam error obcaecati, hic deserunt nemo cupiditate</p>
-		</div>
-		<div class="row">
-			<div class="col-lg-8">
-				<div class="product">
-					<div class="row">
-						<div class="col-lg-2">
-							<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU" class="img-fluid" alt="Product 1">
-						</div>
-						<div class="col-lg-2">
-							<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU" class="img-fluid" alt="Product 1">
-						</div>
-						<div class="col-lg-2">
-							<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU" class="img-fluid" alt="Product 1">
-						</div>
-						<div class="row">
-						<div class="col-lg-2">
-							<h6 class="block-heading p">I am very sorry</h6>
-							<li>Display:5 inch</li>
-							<li>RAM:4GB</li>
-							<li>Memory:32GB</li>
-						</div>
-							<div class="col-lg-2">
-							<h6 class="block-heading p">I am very sorry</h6>
-							<li>Display:5 inch</li>
-							<li>RAM:4GB</li>
-							<li>Memory:32GB</li>
-						</div>
-							<div class="col-lg-2">
-							<h6 class="block-heading p">I am very sorry</h6>
-							<li>Display:5 inch</li>
-							<li>RAM:4GB</li>
-							<li>Memory:32GB</li>
-						</div>
-						<div class="row">
-						<div class="col-lg-2">
-							<label>Quantity</label>
-							<input type="text">
-						 </div>
-							<div class="col-lg-2">
-							<label>Quantity</label>
-							<input type="text">
-						 </div>
-							<div class="col-lg-2">
-							<label>Quantity</label>
-							<input type="text">
-						 </div>
-						</div>
-							<div class="row">
-						<div class="col-lg-2">
-							<p>120$</p>
-						 </div>
-							<div class="col-lg-2">
-							<p>120$</p>
-						 </div>
-							<div class="col-lg-2">
-							<p>120$</p>
-						 </div>
-						</div>
-					 </div>
-					</div>
-				</div>
-		</div>
-			<div class="col-lg-4">
+            ex aspernatur non ipsam quisquam error obcaecati, hic deserunt nemo cupiditate.</p>
+    <div class="row">
+      <div class="col-lg-8">
+        <div class="product">
+          <div class="row">
+            <div class="col-md-4">
+              <img src="https://media.croma.com/image/upload/v1678371941/Croma%20Assets/Communication/Mobiles/Images/270413_bjxs29.png" class="img-fluid">
+            </div>
+            <div class="col-md-4">
+              <img src="https://media.croma.com/image/upload/v1678371941/Croma%20Assets/Communication/Mobiles/Images/270413_bjxs29.png" class="img-fluid">
+            </div>
+            <div class="col-md-4">
+              <img src="https://media.croma.com/image/upload/v1678371941/Croma%20Assets/Communication/Mobiles/Images/270413_bjxs29.png" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
         <div class="summary">
           <h2>Summary</h2>
           <p>Total: $100</p>
@@ -87,8 +40,8 @@
           <button class="btn btn-primary">Checkout</button>
         </div>
       </div>
-		</div>
-	</div>
+    </div>
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
