--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="container">
-    <h1 class="block-heading">Shopping Cart</h1>
+    <h1 class="block-heading p">Shopping Cart</h1>
 		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             Ratione molestiae itaque illum debitis impedit ad eos recusandae qui placeat,
             ex aspernatur non ipsam quisquam error obcaecati, hic deserunt nemo cupiditate.</p>
