--- a/main.html
+++ b/main.html
@@ -15,20 +15,10 @@
             ex aspernatur non ipsam quisquam error obcaecati, hic deserunt nemo cupiditate.</p>
     <div class="row">
       <div class="col-lg-8">
-        <div class="product">
-          <div class="row">
-            <div class="col-md-4">
-              <img src="https://media.croma.com/image/upload/v1678371941/Croma%20Assets/Communication/Mobiles/Images/270413_bjxs29.png" class="img-fluid">
-            </div>
-            <div class="col-md-4">
-              <img src="https://media.croma.com/image/upload/v1678371941/Croma%20Assets/Communication/Mobiles/Images/270413_bjxs29.png" class="img-fluid">
-            </div>
-            <div class="col-md-4">
-              <img src="https://media.croma.com/image/upload/v1678371941/Croma%20Assets/Communication/Mobiles/Images/270413_bjxs29.png" class="img-fluid">
-            </div>
-          </div>
-        </div>
-      </div>
+		  <div class="prduct">
+			  
+		  </div>
+	  </div>
       <div class="col-lg-4">
         <div class="summary">
           <h2>Summary</h2>
