--- a/main.html
+++ b/main.html
@@ -9,14 +9,51 @@
 
 <body>
 	<div class="container">
-    <h1 class="block-heading p">Shopping Cart</h1>
+    <h1 class="block-heading">Shopping Cart</h1>
 		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             Ratione molestiae itaque illum debitis impedit ad eos recusandae qui placeat,
             ex aspernatur non ipsam quisquam error obcaecati, hic deserunt nemo cupiditate.</p>
     <div class="row">
       <div class="col-lg-8">
-		  <div class="prduct">
-			  
+		  <div class="product">
+			  <div class="row">
+				  <div class="col-3">
+					  <div class="img-fluid">
+						  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU">
+					  </div>
+					  <h5 class="text-primary">I am very sorry</h5>
+					  <p>Display:5 inches</p>
+					  <p>RAM:4GB</p>
+					  <p>Memory:32GB</p>
+					  <label>Quantity</label>
+					  <input type="text">
+					  <p>$120</p>
+				</div>
+				  <div class="col-3">
+					  <div class="img-fluid">
+						  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU">
+					  </div>
+					  <h5 class="text-primary">I am very sorry</h5>
+					  <p>Display:5 inches</p>
+					  <p>RAM:4GB</p>
+					  <p>Memory:32GB</p>
+					  <label>Quantity</label>
+					  <input type="text">
+					  <p>$120</p>
+				</div>
+				  <div class="col-3">
+					  <div class="img-fluid">
+						  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU">
+					  </div>
+					  <h5 class="text-primary">I am very sorry</h5>
+					  <p>Display:5 inches</p>
+					  <p>RAM:4GB</p>
+					  <p>Memory:32GB</p>
+					  <label>Quantity</label>
+					  <input type="text">
+					  <p>$120</p>
+				</div>
+			 </div>
 		  </div>
 	  </div>
       <div class="col-lg-4">
