--- a/main.html
+++ b/main.html
@@ -22,9 +22,11 @@
 						  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU">
 					  </div>
 					  <h5 class="text-primary">I am very sorry</h5>
-					  <p>Display:5 inches</p>
-					  <p>RAM:4GB</p>
-					  <p>Memory:32GB</p>
+					  <ul>
+                       <li><a href="#section1">Display:5 inches</a></li>
+                       <li><a href="#section2">RAM:4GB</a></li>
+						<li><a href="#section2">Memory:32GB</a></li>
+                      </ul>
 					  <label>Quantity</label>
 					  <input type="text">
 					  <p>$120</p>
@@ -34,9 +36,11 @@
 						  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU">
 					  </div>
 					  <h5 class="text-primary">I am very sorry</h5>
-					  <p>Display:5 inches</p>
-					  <p>RAM:4GB</p>
-					  <p>Memory:32GB</p>
+					  <ul>
+                       <li><a href="#section1">Display:5 inches</a></li>
+                       <li><a href="#section2">RAM:4GB</a></li>
+						<li><a href="#section2">Memory:32GB</a></li>
+                      </ul>
 					  <label>Quantity</label>
 					  <input type="text">
 					  <p>$120</p>
@@ -46,9 +50,11 @@
 						  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU">
 					  </div>
 					  <h5 class="text-primary">I am very sorry</h5>
-					  <p>Display:5 inches</p>
-					  <p>RAM:4GB</p>
-					  <p>Memory:32GB</p>
+					  <ul>
+                       <li><a href="#section1">Display:5 inches</a></li>
+                       <li><a href="#section2">RAM:4GB</a></li>
+						<li><a href="#section2">Memory:32GB</a></li>
+                      </ul>
 					  <label>Quantity</label>
 					  <input type="text">
 					  <p>$120</p>
