--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 					  <div class="img-fluid">
 						  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU" class="img-fluid">
 					  </div>
-					  <h5 class="block-heading p">I am very sorry</h5>
+					  <h5 class="">I am very sorry</h5>
 					  <ul>
                        <li><a href="#section1">Display:5 inches</a></li>
                        <li><a href="#section2">RAM:4GB</a></li>
@@ -49,7 +49,7 @@
 					  <div class="img-fluid">
 						  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU" class="img-fluid">
 					  </div>
-					  <h5 class="block-heading p">I am very sorry</h5>
+					  <h5 class="">I am very sorry</h5>
 					  <ul>
                        <li><a href="#section1">Display:5 inches</a></li>
                        <li><a href="#section2">RAM:4GB</a></li>
