--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="container">
-    <h1 class="block-heading p">Shopping Cart</h1>
+    <h1 class="block-heading">Shopping Cart</h1>
 		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             Ratione molestiae itaque illum debitis impedit ad eos recusandae qui placeat,
             ex aspernatur non ipsam quisquam error obcaecati, hic deserunt nemo cupiditate.</p>
@@ -21,7 +21,7 @@
 					  <div class="img-fluid">
 						  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-0YZiByxgK1J-NJLHf9_Cb9bhs-r7MwTflg&usqp=CAU" class="img-fluid">
 					  </div>
-					  <h5>I am very sorry</h5>
+					  <h5 class="block-heading p">I am very sorry</h5>
 					  <ul>
                        <li><a href="#section1">Display:5 inches</a></li>
                        <li><a href="#section2">RAM:4GB</a></li>
